# anifeed

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: genrate_docuemtation.yml  tests.yml
docs/: index.md
scripts/: gen_reference.py
src/AniGet/: main.py
src/AniGet/constants/: nyaa_enum.py
src/AniGet/controllers/serializers/: base_serializer.py
src/AniGet/models/apis/: nyaa_api.py
src/AniGet/models/parsers/: nyaa_parser.py
src/AniGet/utils/: log_utils.py
src/anifeed/: config.toml  exceptions.py  main.py
src/anifeed/adapters/: aniilist_adapter.py  base_api.py  mal_adapter.py  nyaa_adapter.py
src/anifeed/adapters/parsers/: anilist_parser.py  base_parser.py  mal_parser.py  nyaa_parser.py
src/anifeed/api/: __init__.py  main.py
src/anifeed/api/controllers/: __init__.py  health_controller.py
src/anifeed/api/routers/: __init__.py  health_router.py
src/anifeed/config/: app_config.py
src/anifeed/constants/: __init__.py  anime_status_enum.py  api_enum.py  app_config.py  nyaa_search_enum.py  toml_config.py
src/anifeed/db/: database.py  mapper.py
src/anifeed/models/: __init__.py  anime_model.py  config_model.py  nyaa_search_model.py  torrent_model.py  user_model.py
src/anifeed/services/: __init__.py  anime_service.py  anime_service_factory.py  application_service.py  parser_factory.py  parser_service.py  similarity_service.py  torrent_service.py
src/anifeed/utils/: __init__.py  commons.py  http_client.py
tests/: conftest.py  test_constants.py  test_integration.py  test_models.py  test_services.py  utils.py
(+23 files in other folders)
