[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anifeed"
version = "0.4.0"
description = "Parses data from an AniList user, serializes to a generic format, and broadcasts torrent data from the animes to a microservice using NyaaTorrents."
readme = "README.md"
authors = [
    { name = "Andre Carvalho Cerqueira", email = "alocksmasao@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests==2.32.5",
    "toml==0.10.2",
    "socketify==0.0.31",
    "beautifulsoup4==4.14.2",
    "sentence-transformers==5.1.2",
]

[project.scripts]
anifeed = "anifeed.main:main"

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
    "/docs",
]
